--- a/index.css
+++ b/index.css
@@ -1,13 +1,14 @@
-/* body {
+ body {
     text-align: center;
-}
+    width: 100rem;
+ }
 div {
     display: inline-block;
 }
 button {
     display: inline-block;
     padding: 10px 20px;
-}*/
+}
  #table {
     display: block;
     margin-top: 20px;
